Service Regression/tests/00DM0000001eO1fMAE/objects/SVOC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>enter any notes that might be helpful to the CDG Team</inlineHelpText>
        <label>Additional Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_BU__c</fullName>
        <inlineHelpText>workflow updates the user&apos;s assigned Business Unit from their profile</inlineHelpText>
        <label>Assigned BU</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Attention_To__c</fullName>
        <inlineHelpText>enter the name of the person who is in charge of billing at the dealership</inlineHelpText>
        <label>Bill to Attention To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Same_as_Physical__c</fullName>
        <inlineHelpText>if you select Yes, the system will automatically populate the physical location address info into the Billing Address Info</inlineHelpText>
        <label>Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDG_Team_Email__c</fullName>
        <defaultValue>&quot;Chris.Raskulinecz@autotradergroup.com&quot;</defaultValue>
        <inlineHelpText>admin field only to store the cdg team email address</inlineHelpText>
        <label>CDG Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <inlineHelpText>select the change type that applies</inlineHelpText>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add New 3rd Party Billing Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change the Invoice Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End An Existing Billing Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Updates - see notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Franchise/Independent Indicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Lot Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Nameplates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Product/Service Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Address Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>enter the name of the city where the customer is located</inlineHelpText>
        <label>Address City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <inlineHelpText>updated by workflow when the record is created, the user&apos;s role is recorded into the record</inlineHelpText>
        <label>Created By Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the Dealer Group Account that this Dealer is related to</inlineHelpText>
        <label>Dealer Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Dealer Group Account)</relationshipLabel>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Member_Dealers__c</fullName>
        <inlineHelpText>enter all the SVOC ids seperated by commas of the dealers that should be part of this new dealer group</inlineHelpText>
        <label>Dealer Group Member Dealers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_SVOC_Id__c</fullName>
        <formula>Dealer_Group_Account__r.SVOC_Id__c</formula>
        <inlineHelpText>formula field that displays the SVOC id related to the dealer in the Dealer Group Account lookup field</inlineHelpText>
        <label>Dealer Group SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Nameplates__c</fullName>
        <inlineHelpText>select the franchises that apply to this dealer, if dealer is a Independent, select the value &quot;Independent&quot;</inlineHelpText>
        <label>Dealer Nameplates</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Dealer - NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <inlineHelpText>selec&apos;t the type that best represents the Dealer&apos;s status</inlineHelpText>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_is_part_of_Dealer_Group__c</fullName>
        <inlineHelpText>if you select  Yes, you will be required to lookup the Dealer Group Account this dealer should be connected to, otherwise answer no if the dealer is not part of a dealer group</inlineHelpText>
        <label>Dealer is part of Dealer Group?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Account_Id__c</fullName>
        <inlineHelpText>This holds the Salesforce.com Account ID value pointing to the resulting record for the Create or Maintain. May or may not be the same as the Source Account ID value depending on the scenario.</inlineHelpText>
        <label>Final Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account pointing to the resulting SVOC record for the Create or Maintain. May or may not be the same as the Source Account value depending on the scenario.</description>
        <inlineHelpText>Account pointing to the resulting SVOC record for the Create or Maintain</inlineHelpText>
        <label>Final Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Final Account)</relationshipLabel>
        <relationshipName>SVOC_Requests_Final_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Enter All Required Information, Upon Save, Request will be submitted&quot;</defaultValue>
        <inlineHelpText>Enter all required information, upon save, request will automatically go for verification and setup</inlineHelpText>
        <label>Instructions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales_Volume__c</fullName>
        <inlineHelpText>Enter the amount that reflects the monthly volume of sales the dealer sells</inlineHelpText>
        <label>Monthly Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Account_Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by the integration whenever a new primary or secondary is inserted from a change request</inlineHelpText>
        <label>New Account Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_Lot_Size__c</fullName>
        <inlineHelpText>enter the value range that applies to the dealer</inlineHelpText>
        <label>Lot Size-New</label>
        <picklist>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Customer_Name__c</fullName>
        <inlineHelpText>type in the name of the customer</inlineHelpText>
        <label>New Customer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_My_Team__c</fullName>
        <formula>IF (CreatedById = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On My Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>enter the primary phone number for the new account</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <inlineHelpText>updated by the integration when the request has been processed by the CDG Team</inlineHelpText>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Age__c</fullName>
        <formula>IF(TEXT(Request_Status__c) = &quot;Submitted&quot;, Today()-  DATEVALUE(CreatedDate),  DATEVALUE(Request_Complete_Date__c) - DATEVALUE(Request_Submitted_Date__c ))</formula>
        <label>Request Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Complete_Date__c</fullName>
        <description>Date the SVOC request is completed.</description>
        <inlineHelpText>updated by workflow when the CDG team processed the request</inlineHelpText>
        <label>Date Request Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <formula>CASE( Request_Status__c , 
&quot;New&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015E0000002kqNV&amp;oid=00DM0000001eO1f&amp;lastMod=1386292929000&quot;, &quot;NOT SUBMITTED&quot;), 
&quot;Submitted&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015E0000002kqNa&amp;oid=00DM0000001eO1f&amp;lastMod=1386292959000&quot;, &quot;SUBMITTED&quot; ),
&quot;Completed - Approved&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015E0000002kqNf&amp;oid=00DM0000001eO1f&amp;lastMod=1386292991000&quot;, &quot;COMPLETED&quot; ),
NULL)</formula>
        <inlineHelpText>formula field that looks at the submit request checkbox and if the box is checked displays a visual &quot;not submitted&quot; or displays submitted</inlineHelpText>
        <label>Request Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Instructions__c</fullName>
        <defaultValue>&quot;Request WILL submit upon Save, unless the submit request checkbox is unchecked&quot;</defaultValue>
        <inlineHelpText>read only field that gives the user instructions regarding the change request</inlineHelpText>
        <label>Request Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>updated by workflow has the request is processed</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <color>#FFFF66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Approved</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Rejected</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Submitted_Date__c</fullName>
        <description>Date the SVOC Request was submitted to SVOC</description>
        <inlineHelpText>updated by workflow when the user checks the &quot;Submit Request&quot; Checkbox</inlineHelpText>
        <label>Date Request Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>SVOC Request Type either Create or Maintain. When requests are submitted to SVOC the Customer Provisioning Group may end up assigning a Create Request to an existing account or may create a new account on a Maintain Request.  Check the Final Account or Final Account Feature for the request result.</description>
        <inlineHelpText>SVOC Customer Provisioning Group may assign a Create Request to an existing account or may create a new account on a Maintain Request.  Check the Final Account or Final Account Feature for the request result.</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Unverified Prospect Dealer Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVOC_Id__c</fullName>
        <inlineHelpText>For a “Create” type request this will house the value that was assigned by SVOC. For a “Maintain” type request this will be the SVOC ID of the original customer that the request relates to.</inlineHelpText>
        <label>SVOC Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Request_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;Id , Name &amp; &quot; - &quot; &amp; Source_Account__r.Name &amp; &quot; - &quot; &amp; TEXT(Request_Type__c) ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Sub_Type__c</fullName>
        <formula>TEXT( Source_Account__r.SVOC_Sub_Type__c )</formula>
        <inlineHelpText>formula field that reads the SVOC Sub Type from the Account</inlineHelpText>
        <label>Source Account SVOC Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Subtype__c</fullName>
        <label>Customer Subtype</label>
        <picklist>
            <controllingField>SVOC_Type__c</controllingField>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - STATE, LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASING COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESELLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle History Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVOC_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Account_Billing_Address__c</fullName>
        <formula>&quot;STREET&quot;&amp;&quot;:&quot;&amp;  Source_Account__r.BillingStreet  &amp;&quot; &quot;&amp; &quot;CITY&quot;&amp;&quot;:&quot;&amp;  Source_Account__r.BillingCity  &amp;&quot; &quot;&amp; &quot;STATE&quot;&amp;&quot;:&quot;&amp;  Source_Account__r.BillingState  &amp;&quot; &quot;&amp; &quot;ZIP&quot;&amp;&quot;:&quot;&amp;  Source_Account__r.BillingPostalCode</formula>
        <inlineHelpText>formula field that concatenates the account standard billing address</inlineHelpText>
        <label>Source Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Dealer_Type__c</fullName>
        <formula>TEXT(Source_Account__r.Dealer_Type__c)</formula>
        <inlineHelpText>formula field that reads the source account dealer type</inlineHelpText>
        <label>Source Account Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Id__c</fullName>
        <formula>IF(  RecordType.Name = &quot;Create&quot;, NULL, Source_Account__r.Id   )</formula>
        <inlineHelpText>if the request is linked to an unverified prospect account or a primary account, this is the account record id otherwise this is blank</inlineHelpText>
        <label>Source Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lead_Billing_State__c</fullName>
        <formula>Source_Account__r.Lead_Billing_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Account Lead Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lead_Billing_Street__c</fullName>
        <formula>Source_Account__r.Lead_Billing_Street__c</formula>
        <inlineHelpText>formula field that reads the lead billing info</inlineHelpText>
        <label>Source Account Lead Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lead_Billing_Zip__c</fullName>
        <formula>Source_Account__r.Lead_Billing_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Account Lead Billing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lead_City__c</fullName>
        <formula>Source_Account__r.Lead_Billing_City__c</formula>
        <inlineHelpText>formula field that reads the billing info entered in the lead</inlineHelpText>
        <label>Source Account Lead Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lot_Size_New__c</fullName>
        <formula>Source_Account__r.Lot_Size_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the New car lot size from the account</inlineHelpText>
        <label>Source Account Lot Size - New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Lot_Size_Used__c</fullName>
        <formula>Source_Account__r.Lot_Size_Used__c</formula>
        <inlineHelpText>formula field that reads the used car lot size from the source account</inlineHelpText>
        <label>Source Account Lot Size - Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Phone__c</fullName>
        <formula>Source_Account__r.Phone</formula>
        <inlineHelpText>formula field that reads the source account phone #</inlineHelpText>
        <label>Source Account Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Web_City__c</fullName>
        <inlineHelpText>if not populated from the lead, enter the city listed on the customer&apos;s website</inlineHelpText>
        <label>Source Account Web City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>